--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 favicon: /favicon.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "Hexo, NexT"
+keywords: "sunnyyan, blog, webdeveloper"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
@@ -70,8 +70,8 @@ scheme: Muse
 # Social Links
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
-#social:
-  #LinkLabel: Link
+social:
+  GitHub: https://github.com/zhipengyan
 
 
 # Social Links Icons
@@ -154,7 +154,7 @@ scroll_to_more: true
 # Automatically Excerpt. Not recommand.
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: false
+  enable: true
   length: 150
 
 
@@ -185,7 +185,7 @@ mathjax:
 #duoshuo_shortname:
 
 # Disqus
-#disqus_shortname:
+disqus_shortname: sunnyyan
 
 # Baidu Share
 # Available value:
@@ -209,7 +209,7 @@ mathjax:
 #google_analytics:
 
 # CNZZ count
-#cnzz_siteid:
+cnzz_siteid: 1254927630
 
 
 # Make duoshuo show UA
@@ -235,16 +235,16 @@ facebook_sdk:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: 6V5dVOzokn06Ec1c5cx6DrN4-gzGzoHsz
+  app_key: 6CmcWurYrCJ7IaYnTk6mHh7b 
 
 
 # Tencent analytics ID
 # tencent_analytics:
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO
-baidu_push: false
+baidu_push: true
 
 
 
