--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -69,3 +69,9 @@ theme: hexo-theme-next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
